Removed arrow type mark on nav

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
 							</ul>
 						</div>
 						<div class="mx-auto mw-50 d-none d-lg-block justify-content-center text-center">
-							<svg xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="nav-center-img position-absolute d-none d-lg-inline-block">
-								<!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+							<!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"
+								class="nav-center-img position-absolute d-none d-lg-inline-block">
 								<g>
-								 <title>Layer 1</title>
-								 <path id="line_1" d="m2.66666,6.66667l425.33334,319.99999" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none"/>
-								 <path id="svg_1" d="m800.00005,6.66673l-385.33333,319.99999" transform="rotate(180 607.3333740234375,166.6667327880859) " stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none"/>
+									<title>Layer 1</title>
+									<path id="line_1" d="m2.66666,6.66667l425.33334,319.99999" stroke-linecap="null"
+										stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none" />
+									<path id="svg_1" d="m800.00005,6.66673l-385.33333,319.99999"
+										transform="rotate(180 607.3333740234375,166.6667327880859) " stroke-linecap="null"
+										stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none" />
 								</g>
-							 </svg>
+							</svg> -->
 							<h1 class="text-oswald position-relative navBrand ml-4">digital
 								<b class="text-orange">.</b>
 							</h1>
@@ -111,10 +114,12 @@
 				<div class="col-lg-3 my-4 text-center text-lg-left p-5">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-orange">We are</span> creative team.</h3>
-					<strong>Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
+					<strong>Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Nulla
 						odio et illum amet molestias, expedita!</strong>
 					<br>
-					<p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque maxime omnis eos ab autem ratione totam
+					<p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque maxime
+						omnis eos ab autem ratione totam
 						nam consectetur.</p>
 					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
 				</div>
@@ -148,12 +153,17 @@
 				<div class="col-lg-3 my-4 text-center text-lg-left text-light p-5">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-orange">Our best</span> team.</h3>
-					<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni?.Lorem ipsum dolor sit amet,Lorem ipsum dolor
-						sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla odio et illum amet molestias, expedita!</strong>
+					<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni?.Lorem ipsum dolor sit
+						amet,Lorem ipsum dolor
+						sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla odio et illum amet molestias,
+						expedita!</strong>
 					<br>
-					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate adipisci reprehenderit tempora perspiciatis
-						esse dolore tenetur dolores aut cumque!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, quia minus
-						deserunt voluptates ut perspiciatis!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque
+					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate adipisci
+						reprehenderit tempora perspiciatis
+						esse dolore tenetur dolores aut cumque!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, quia
+						minus
+						deserunt voluptates ut perspiciatis!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa,
+						expedita itaque
 						maxime omnis eos ab autem ratione totam nam consectetur.</p>
 					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
 				</div>
@@ -238,9 +248,12 @@
 				<div class="col-lg-3 my-4 text-center text-lg-left p-4">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-orange">Our</span> creative work.</h3>
-					<p class="text-dark"> Culpa, expedita itaque maxime omnis eos ab autem ratione totam nam consectetur. Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Aspernatur enim, illum eius! Fugiat quo, accusamus perferendis voluptatem, rem explicabo voluptate?
-						<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestiae, possimus, vero ipsa, quis voluptas
+					<p class="text-dark"> Culpa, expedita itaque maxime omnis eos ab autem ratione totam nam consectetur. Lorem
+						ipsum dolor sit amet, consectetur
+						adipisicing elit. Aspernatur enim, illum eius! Fugiat quo, accusamus perferendis voluptatem, rem explicabo
+						voluptate?
+						<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestiae, possimus, vero ipsa,
+						quis voluptas
 						rem fugiat nisi est accusantium placeat, reprehenderit quia iusto et.</p>
 					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
 				</div>
@@ -273,8 +286,10 @@
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Blanditiis explicabo mollitia commodi nihil fuga, animi?
-								Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, eius.</p>
+							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Blanditiis explicabo
+								mollitia commodi nihil fuga, animi?
+								Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, eius.
+							</p>
 						</div>
 					</div>
 					<div class="row my-4">
@@ -283,8 +298,10 @@
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis explicabo mollitia commodi nihil fuga, animi?
-								Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, fugit.</p>
+							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis explicabo
+								mollitia commodi nihil fuga, animi?
+								Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, fugit.
+							</p>
 						</div>
 					</div>
 					<div class="row my-4">
@@ -293,7 +310,8 @@
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis explicabo mollitia commodi nihil fuga, animi?
+							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis explicabo
+								mollitia commodi nihil fuga, animi?
 								Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ut.</p>
 						</div>
 					</div>
@@ -308,11 +326,14 @@
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-orange">Our</span> best services.</h3>
 					<div class="float-md-right">
-						<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat maxime, eos! Animi, deserunt itaque facilis. .Lorem
-							ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla odio
+						<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat maxime, eos! Animi, deserunt
+							itaque facilis. .Lorem
+							ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+							Nulla odio
 							et illum amet molestias, expedita!</strong>
 						<br>
-						<p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque maxime omnis eos ab autem ratione
+						<p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque maxime
+							omnis eos ab autem ratione
 							totam nam consectetur.</p>
 					</div>
 					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
@@ -320,35 +341,43 @@
 				<div class="col-lg-1">
 					<div class="section-5-over-container bg-dark position-relative d-none d-lg-block">
 						<div class="row">
-							<div class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
+							<div
+								class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-share-alt"></i>
 								</div>
 								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
-								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam vel inventore eos.</p>
+								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+									laboriosam vel inventore eos.</p>
 							</div>
-							<div class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
+							<div
+								class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-share-alt"></i>
 								</div>
 								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
-								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam vel inventore eos.</p>
+								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+									laboriosam vel inventore eos.</p>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
+							<div
+								class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-cog"></i>
 								</div>
 								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
-								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam vel inventore eos.</p>
+								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+									laboriosam vel inventore eos.</p>
 							</div>
-							<div class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
+							<div
+								class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-line-chart"></i>
 								</div>
 								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
-								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam vel inventore eos.</p>
+								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+									laboriosam vel inventore eos.</p>
 							</div>
 						</div>
 					</div>
@@ -367,13 +396,15 @@
 					<div class="review-container">
 						<div class="my-3 review">
 							<p class="fa fa-quote-left review-quote text-light"></p>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores voluptatibus, incidunt nemo porro nulla quas,
+							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
+								voluptatibus, incidunt nemo porro nulla quas,
 								ea, tempore debitis eius tenetur veniam, eos iure a!</p>
 							<strong class="text-uppercase text-light">John Doe,CEO</strong>
 						</div>
 						<div class="my-3 review">
 							<p class="fa fa-quote-left review-quote text-light"></p>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores voluptatibus, incidunt nemo porro nulla quas,
+							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
+								voluptatibus, incidunt nemo porro nulla quas,
 								ea, tempore debitis eius tenetur veniam, eos iure a!</p>
 							<strong class="text-uppercase text-light">John Doe,CEO</strong>
 						</div>
@@ -388,36 +419,51 @@
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="jumbotron shadow px-5">
-									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione recusandae minus, quia at..Lorem
-										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum laudantium
-										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, cumque
+									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione
+										recusandae minus, quia at..Lorem
+										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum
+										laudantium
+										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Sint, cumque
 										debitis id quisquam ipsa quos.</strong>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus accusantium modi ratione, reprehenderit tempora
-										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati assumenda, accusantium
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+										accusantium modi ratione, reprehenderit tempora
+										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati
+										assumenda, accusantium
 										ipsa laborum cupiditate? Alias, debitis commodi.</p>
 									<strong class="text-uppercase">John Doe, CEO</strong>
 								</div>
 							</div>
 							<div class="carousel-item">
 								<div class="jumbotron shadow px-5">
-									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione recusandae minus, quia at..Lorem
-										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum laudantium
-										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, cumque
+									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione
+										recusandae minus, quia at..Lorem
+										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum
+										laudantium
+										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Sint, cumque
 										debitis id quisquam ipsa quos.</strong>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus accusantium modi ratione, reprehenderit tempora
-										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati assumenda, accusantium
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+										accusantium modi ratione, reprehenderit tempora
+										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati
+										assumenda, accusantium
 										ipsa laborum cupiditate? Alias, debitis commodi.</p>
 									<strong class="text-uppercase">John Doe, CEO</strong>
 								</div>
 							</div>
 							<div class="carousel-item">
 								<div class="jumbotron shadow px-5">
-									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione recusandae minus, quia at..Lorem
-										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum laudantium
-										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, cumque
+									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione
+										recusandae minus, quia at..Lorem
+										ipsum dolor sit amet, consectetur adipisicing elit. Molestias aliquid debitis quia perspiciatis eum
+										laudantium
+										eos earum dignissimos sapiente nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Sint, cumque
 										debitis id quisquam ipsa quos.</strong>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus accusantium modi ratione, reprehenderit tempora
-										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati assumenda, accusantium
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+										accusantium modi ratione, reprehenderit tempora
+										ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aut perferendis obcaecati
+										assumenda, accusantium
 										ipsa laborum cupiditate? Alias, debitis commodi.</p>
 									<strong class="text-uppercase">John Doe, CEO</strong>
 								</div>
