:lipstick: Added design arrow

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<!-- Navbar links -->
-					<div class="collapse navbar-collapse" id="collapsibleNavbar ">
-						<div class="navLeft float-lg-left text-lg-left position-relative">
+					<div class="collapse navbar-collapse py-4" id="collapsibleNavbar">
+						<div class="navLeft float-lg-left text-lg-left mr-auto">
 							<ul class="navbar-nav float-lg-left text-nowrap">
 								<li class="nav-item">
 									<a class="nav-link text-light text-uppercase" href="# ">Home</a>
@@ -37,22 +37,11 @@
 								</li>
 							</ul>
 						</div>
-						<div class="mx-auto mw-50 d-none d-lg-block justify-content-center text-center">
-							<!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg"
-								class="nav-center-img position-absolute d-none d-lg-inline-block">
-								<g>
-									<title>Layer 1</title>
-									<path id="line_1" d="m2.66666,6.66667l425.33334,319.99999" stroke-linecap="null"
-										stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none" />
-									<path id="svg_1" d="m800.00005,6.66673l-385.33333,319.99999"
-										transform="rotate(180 607.3333740234375,166.6667327880859) " stroke-linecap="null"
-										stroke-linejoin="null" stroke-dasharray="null" stroke-width="20" stroke="#ffb110" fill="none" />
-								</g>
-							</svg> -->
-							<h1 class="text-oswald position-relative navBrand ml-4">digital
-								<b class="text-orange">.</b>
-							</h1>
-							<div class="nav-social position-relative ml-4">
+						<div class="nav-center mx-auto w-50 position-absolute text-center d-none d-lg-block">
+							<img src="img/arrow.png" alt="arrow" aria-hidden="true"
+								class="nav-center-img position-absolute d-none d-lg-block">
+							<h1 class="text-oswald position-relative navBrand">digital&nbsp;<b class="text-orange">.</b></h1>
+							<div class="nav-social position-relative text-center">
 								<a href="https://facebook.com" class="text-light" target="_blank">
 									<i class="fa fa-facebook facebook"></i>
 								</a>
@@ -64,25 +53,7 @@
 								</a>
 							</div>
 						</div>
-						<!-- <div class="mx-auto mw-50 text-center d-none d-lg-block">
-							<img src="img/arrow.png" alt="arrow" class="nav-center-img position-absolute d-none d-lg-inline-block">
-							<h1 class="text-oswald position-relative navBrand">digital
-								<b class="text-orange">.</b>
-							</h1>
-							<div class="nav-social position-relative text-center">
-								<a href="https://facebook.com" class="text-light" target="_blank">
-                                    <i class="fa fa-facebook facebook"></i>
-                                </a>
-								<a href="https://plus.google.com" class="text-light" target="_blank">
-                                    <i class="fa fa-google-plus google-plus"></i>
-                                </a>
-								<a href="https://twitter.com" class="text-light" target="_blank">
-                                    <i class="fa fa-twitter twitter"></i>
-                                </a>
-							</div>
-						</div> -->
-						<div class="navRight float-lg-right text-lg-right position-relative">
-
+						<div class="navRight text-lg-right ml-auto">
 							<ul class="navbar-nav float-lg-right text-nowrap">
 								<li class="nav-item">
 									<a class="nav-link text-light text-uppercase" href="#">Services</a>
