--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" IE="Edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,shrink-to-fit=no">
-	<title>Digital</title>
+	<title>Digital Solutions</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -45,11 +45,11 @@
 								<a href="https://facebook.com" class="text-light" target="_blank">
 									<i class="fa fa-facebook facebook"></i>
 								</a>
-								<a href="https://plus.google.com" class="text-light" target="_blank">
-									<i class="fa fa-google-plus google-plus"></i>
-								</a>
 								<a href="https://twitter.com" class="text-light" target="_blank">
 									<i class="fa fa-twitter twitter"></i>
+								</a>
+								<a href="https://linkedin.com" class="text-light" target="_blank">
+									<i class="fa fa-linkedin linkedin"></i>
 								</a>
 							</div>
 						</div>
