--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
 	<title>Digital Solutions</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="scss/style.scss">
 </head>
 
 <body>
@@ -515,9 +514,7 @@
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
-	<!--<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js "></script>-->
 	<script src="js/script.js"></script>
 </body>
 
