:lipstick: Improved footer

--- a/src/index.html
+++ b/src/index.html
@@ -507,9 +507,9 @@
 			</div>
 			<img src="img/arrow.png" alt="" class="design-img position-absolute d-none d-lg-inline-block">
 			<div class="footer-copyright position-absolute">
-				<strong>Designed By PSDfreebies</strong>
+				<strong>Designed By <a href="https://psdfreebies.com/" class="link text-white">PSDfreebies</a></strong>
 				<br>
-				<span class="text-uppercase">Copyright &copy;2017</span>
+				<span class="text-uppercase my-1">Copyright &copy; 2017</span>
 			</div>
 		</footer>
 	</div>
