:art: Made scss more modular

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 						<div class="nav-center mx-auto w-50 position-absolute text-center d-none d-lg-block">
 							<img src="img/arrow.png" alt="arrow" aria-hidden="true"
 								class="nav-center-img position-absolute d-none d-lg-block">
-							<h1 class="text-oswald position-relative navBrand">digital&nbsp;<b class="text-orange">.</b></h1>
+							<h1 class="text-oswald position-relative navBrand">digital&nbsp;<b class="text-primary">.</b></h1>
 							<div class="nav-social position-relative text-center">
 								<a href="https://facebook.com" class="text-light" target="_blank">
 									<i class="fa fa-facebook facebook"></i>
@@ -72,7 +72,7 @@
 						<h1 class="display-2 text-uppercase text-oswald font-weight-bold">This is the Future of Web Design.</h1>
 						<p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, provident accusamus,
 							<br> velit repudiandae velit repudiandae quos perferendis molestias ipsam.</p>
-						<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
+						<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 					</div>
 				</header>
 			</div>
@@ -83,7 +83,7 @@
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3 my-4 text-center text-lg-left p-5">
 					<h3 class="text-uppercase display-4 font-weight-bold">
-						<span class="text-orange">We are</span> creative team.</h3>
+						<span class="text-primary">We are</span> creative team.</h3>
 					<strong>Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Nulla
 						odio et illum amet molestias, expedita!</strong>
@@ -91,7 +91,7 @@
 					<p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, expedita itaque maxime
 						omnis eos ab autem ratione totam
 						nam consectetur.</p>
-					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
+					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div class="col-lg-8 d-none d-lg-block">
 					<div class="section-1-img-container position-absolute">
@@ -122,7 +122,7 @@
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3 my-4 text-center text-lg-left text-light p-5">
 					<h3 class="text-uppercase display-4 font-weight-bold">
-						<span class="text-orange">Our best</span> team.</h3>
+						<span class="text-primary">Our best</span> team.</h3>
 					<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni?.Lorem ipsum dolor sit
 						amet,Lorem ipsum dolor
 						sit amet,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla odio et illum amet molestias,
@@ -135,7 +135,7 @@
 						deserunt voluptates ut perspiciatis!.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa,
 						expedita itaque
 						maxime omnis eos ab autem ratione totam nam consectetur.</p>
-					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
+					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div class="col-lg-8 text-center px-5">
 					<div class="row my-4">
@@ -217,7 +217,7 @@
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3 my-4 text-center text-lg-left p-4">
 					<h3 class="text-uppercase display-4 font-weight-bold">
-						<span class="text-orange">Our</span> creative work.</h3>
+						<span class="text-primary">Our</span> creative work.</h3>
 					<p class="text-dark"> Culpa, expedita itaque maxime omnis eos ab autem ratione totam nam consectetur. Lorem
 						ipsum dolor sit amet, consectetur
 						adipisicing elit. Aspernatur enim, illum eius! Fugiat quo, accusamus perferendis voluptatem, rem explicabo
@@ -225,7 +225,7 @@
 						<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestiae, possimus, vero ipsa,
 						quis voluptas
 						rem fugiat nisi est accusantium placeat, reprehenderit quia iusto et.</p>
-					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
+					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div class="col-lg-8 text-center">
 					<div class="section-3-row d-lg-flex flex-wrap p-1">
@@ -248,11 +248,11 @@
 				</div>
 				<div class="col-lg-5 text-light p-4 text-lg-left text-center">
 					<h3 class="text-uppercase display-4 font-weight-bold">
-						<span class="text-orange">Why</span>
+						<span class="text-primary">Why</span>
 						<br>choose us.</h3>
 					<div class="row my-3">
 						<div class="col-sm-3">
-							<i class="fa fa-flag-o text-orange icon"></i>
+							<i class="fa fa-flag-o text-primary icon"></i>
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
@@ -264,7 +264,7 @@
 					</div>
 					<div class="row my-4">
 						<div class="col-sm-3">
-							<i class="fa fa-desktop text-orange icon"></i>
+							<i class="fa fa-desktop text-primary icon"></i>
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
@@ -276,7 +276,7 @@
 					</div>
 					<div class="row my-4">
 						<div class="col-sm-3">
-							<i class="fa fa-user text-orange icon"></i>
+							<i class="fa fa-user text-primary icon"></i>
 						</div>
 						<div class="col-sm-9">
 							<h6 class="text-uppercase font-weight-bold">Lorem ipsum dolor.</h6>
@@ -294,7 +294,7 @@
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3 my-4 text-lg-right p-4 text-center">
 					<h3 class="text-uppercase display-4 font-weight-bold">
-						<span class="text-orange">Our</span> best services.</h3>
+						<span class="text-primary">Our</span> best services.</h3>
 					<div class="float-md-right">
 						<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat maxime, eos! Animi, deserunt
 							itaque facilis. .Lorem
@@ -306,7 +306,7 @@
 							omnis eos ab autem ratione
 							totam nam consectetur.</p>
 					</div>
-					<button class="mt-4 btn btn-default btn-rounded bg-orange text-light font-weight-bold">Read More</button>
+					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div class="col-lg-1">
 					<div class="section-5-over-container bg-dark position-relative d-none d-lg-block">
@@ -316,7 +316,7 @@
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-share-alt"></i>
 								</div>
-								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
+								<h5 class="font-weight-bold text-primary mt-3">Lorem, ipsum dolor.</h5>
 								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
 									laboriosam vel inventore eos.</p>
 							</div>
@@ -325,7 +325,7 @@
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-share-alt"></i>
 								</div>
-								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
+								<h5 class="font-weight-bold text-primary mt-3">Lorem, ipsum dolor.</h5>
 								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
 									laboriosam vel inventore eos.</p>
 							</div>
@@ -336,7 +336,7 @@
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-cog"></i>
 								</div>
-								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
+								<h5 class="font-weight-bold text-primary mt-3">Lorem, ipsum dolor.</h5>
 								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
 									laboriosam vel inventore eos.</p>
 							</div>
@@ -345,7 +345,7 @@
 								<div class="section-5-icon text-center d-flex align-items-center justify-content-center">
 									<i class="fa fa-line-chart"></i>
 								</div>
-								<h5 class="font-weight-bold text-orange mt-3">Lorem, ipsum dolor.</h5>
+								<h5 class="font-weight-bold text-primary mt-3">Lorem, ipsum dolor.</h5>
 								<p class="w-75 text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
 									laboriosam vel inventore eos.</p>
 							</div>
@@ -362,7 +362,7 @@
 				<div class="col-lg-1 bg-dark"></div>
 				<div class="col-lg-3 bg-dark pt-5 text-center">
 					<h2 class="display-4 text-uppercase text-light font-weight-bold">
-						<span class="text-orange">Our</span> Client Say</h2>
+						<span class="text-primary">Our</span> Client Say</h2>
 					<div class="review-container">
 						<div class="my-3 review">
 							<p class="fa fa-quote-left review-quote text-light"></p>
@@ -384,7 +384,7 @@
 					<img src="img/model.jpg" alt="" class="img-fluid">
 				</div>
 				<div class="col-lg-4 bg-light pt-5 text-center">
-					<h2 class="text-uppercase text-orange fa fa-quote-left fa-big-quote"></h2>
+					<h2 class="text-uppercase text-primary fa fa-quote-left fa-big-quote"></h2>
 					<div id="carouselIndicators" class="carousel slide text-center" data-ride="carousel">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
@@ -449,7 +449,7 @@
                         <span class="sr-only">Next</span>
                         </a>
                         -->
-						<ol class="carousel-indicators p-3 my-2 bg-orange">
+						<ol class="carousel-indicators p-3 my-2 bg-primary">
 							<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
 							<li data-target="#carouselIndicators" data-slide-to="1"></li>
 							<li data-target="#carouselIndicators" data-slide-to="2"></li>
@@ -460,7 +460,7 @@
 		</section>
 		<section class="section-7 text-center">
 			<h2 class="text-uppercase text-light font-weight-bold my-4">
-				<span class="text-orange">Get</span> in touch</h2>
+				<span class="text-primary">Get</span> in touch</h2>
 			<div>
 				<a href="https://facebook.com" target="_blank" class="fa fa-facebook fa-circle-down text-light mt-1"></a>
 				<a href="https://plus.google.com" target="_blank" class="fa fa-google-plus fa-circle-down text-light mt-1"></a>
@@ -474,7 +474,7 @@
 			<div class="d-lg-flex justify-content-center">
 				<div class="d-lg-flex align-items-center contact">
 					<div class="px-5">
-						<i class="fa fa-envelope-o text-orange"></i>
+						<i class="fa fa-envelope-o text-primary"></i>
 					</div>
 					<div>
 						<h5>Email</h5>
@@ -485,7 +485,7 @@
 				</div>
 				<div class="d-lg-flex align-items-center contact">
 					<div class="px-5">
-						<i class="fa fa-mobile text-orange"></i>
+						<i class="fa fa-mobile text-primary"></i>
 					</div>
 					<div>
 						<h5>Call Us</h5>
@@ -496,7 +496,7 @@
 				</div>
 				<div class="d-lg-flex align-items-center contact">
 					<div class="px-5">
-						<i class="fa fa-map-o text-orange"></i>
+						<i class="fa fa-map-o text-primary"></i>
 					</div>
 					<div>
 						<h5>Address</h5>
