:art: Changed script position

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="scss/style.scss">
+	<script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
+	<script defer src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script defer src="js/script.js"></script>
 </head>
 
 <body>
@@ -513,9 +516,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
-	<script src="js/script.js"></script>
 </body>
 
 </html>
