:art: Improved initial loading

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="loader" id="loader"></div>
-	<div class="container-fluid" id="main">
+	<div class="container-fluid d-none" id="main">
 		<div class="hero-image" id="hero-image">
 			<div class="dark-overlay text-center">
 				<nav class=" navbar navbar-expand-md navbar-dark">
